Database integration and query finalized
