# src/routes/tables.route.ts
@@ -1,0 +1,8 @@
+import { Router } from "express";
+import { getPaginatedTableController } from "../controllers/tables.controller";
+
+const router = Router();
+
+router.get("/:tableName", getPaginatedTableController);
+
+export default router;
